[tool.poetry]
name = "rhythm-api"
version = "0.1.0"
description = "ReST API server for Rhythm"
authors = ["Deepak Duggirala <deepakduggi@gmail.com>"]
readme = "README.md"
packages = [{include = "rhythm_api"}]

[tool.poetry.dependencies]
python = "^3.11"
sca-rhythm = "^0.3.1"
celery = "^5.2.7"
flask = "^2.2.3"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
flask-swagger-ui = "^4.11.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
requests = "^2.28.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
