[tool.poetry]
name = "rhythm-api"
version = "0.1.0"
description = "ReST API server for Rhythm"
authors = ["Deepak Duggirala <deepakduggi@gmail.com>"]
readme = "README.md"
packages = [{ include = "rhythm_api" }]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.2.7"
python-dotenv = "^1.0.0"
fastapi = "^0.95.1"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
gunicorn = "^20.1.0"
sca-rhythm = "^0.4.8"
jwcrypto = "^1.4.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
requests = "^2.28.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "rhythm_api.main:start_dev"